Inserção de validadores com JOI
Inclusão de módulos para validações utilizando JOI no middlewere das rotas da api e alterações outras alterações no código para uso de boas práticas de programação
